--- a/clusteringWithKMeans.ipynb
+++ b/clusteringWithKMeans.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,6 +22,452 @@
     "y = df['price']\n",
     "\n",
     "X_train, X_valid, y_train, y_valid = train_test_split(X, y, train_size=0.8, test_size=0.2, random_state=0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>symboling</th>\n",
+       "      <th>make</th>\n",
+       "      <th>fuel_type</th>\n",
+       "      <th>aspiration</th>\n",
+       "      <th>num_of_doors</th>\n",
+       "      <th>body_style</th>\n",
+       "      <th>drive_wheels</th>\n",
+       "      <th>engine_location</th>\n",
+       "      <th>wheel_base</th>\n",
+       "      <th>length</th>\n",
+       "      <th>width</th>\n",
+       "      <th>height</th>\n",
+       "      <th>curb_weight</th>\n",
+       "      <th>engine_type</th>\n",
+       "      <th>num_of_cylinders</th>\n",
+       "      <th>engine_size</th>\n",
+       "      <th>fuel_system</th>\n",
+       "      <th>bore</th>\n",
+       "      <th>stroke</th>\n",
+       "      <th>compression_ratio</th>\n",
+       "      <th>horsepower</th>\n",
+       "      <th>peak_rpm</th>\n",
+       "      <th>city_mpg</th>\n",
+       "      <th>highway_mpg</th>\n",
+       "      <th>price</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>3</td>\n",
+       "      <td>alfa-romero</td>\n",
+       "      <td>gas</td>\n",
+       "      <td>std</td>\n",
+       "      <td>2</td>\n",
+       "      <td>convertible</td>\n",
+       "      <td>rwd</td>\n",
+       "      <td>front</td>\n",
+       "      <td>88.6</td>\n",
+       "      <td>168.8</td>\n",
+       "      <td>64.1</td>\n",
+       "      <td>48.8</td>\n",
+       "      <td>2548</td>\n",
+       "      <td>dohc</td>\n",
+       "      <td>4</td>\n",
+       "      <td>130</td>\n",
+       "      <td>mpfi</td>\n",
+       "      <td>3.47</td>\n",
+       "      <td>2.68</td>\n",
+       "      <td>9</td>\n",
+       "      <td>111</td>\n",
+       "      <td>5000</td>\n",
+       "      <td>21</td>\n",
+       "      <td>27</td>\n",
+       "      <td>13495</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>3</td>\n",
+       "      <td>alfa-romero</td>\n",
+       "      <td>gas</td>\n",
+       "      <td>std</td>\n",
+       "      <td>2</td>\n",
+       "      <td>convertible</td>\n",
+       "      <td>rwd</td>\n",
+       "      <td>front</td>\n",
+       "      <td>88.6</td>\n",
+       "      <td>168.8</td>\n",
+       "      <td>64.1</td>\n",
+       "      <td>48.8</td>\n",
+       "      <td>2548</td>\n",
+       "      <td>dohc</td>\n",
+       "      <td>4</td>\n",
+       "      <td>130</td>\n",
+       "      <td>mpfi</td>\n",
+       "      <td>3.47</td>\n",
+       "      <td>2.68</td>\n",
+       "      <td>9</td>\n",
+       "      <td>111</td>\n",
+       "      <td>5000</td>\n",
+       "      <td>21</td>\n",
+       "      <td>27</td>\n",
+       "      <td>16500</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1</td>\n",
+       "      <td>alfa-romero</td>\n",
+       "      <td>gas</td>\n",
+       "      <td>std</td>\n",
+       "      <td>2</td>\n",
+       "      <td>hatchback</td>\n",
+       "      <td>rwd</td>\n",
+       "      <td>front</td>\n",
+       "      <td>94.5</td>\n",
+       "      <td>171.2</td>\n",
+       "      <td>65.5</td>\n",
+       "      <td>52.4</td>\n",
+       "      <td>2823</td>\n",
+       "      <td>ohcv</td>\n",
+       "      <td>6</td>\n",
+       "      <td>152</td>\n",
+       "      <td>mpfi</td>\n",
+       "      <td>2.68</td>\n",
+       "      <td>3.47</td>\n",
+       "      <td>9</td>\n",
+       "      <td>154</td>\n",
+       "      <td>5000</td>\n",
+       "      <td>19</td>\n",
+       "      <td>26</td>\n",
+       "      <td>16500</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2</td>\n",
+       "      <td>audi</td>\n",
+       "      <td>gas</td>\n",
+       "      <td>std</td>\n",
+       "      <td>4</td>\n",
+       "      <td>sedan</td>\n",
+       "      <td>fwd</td>\n",
+       "      <td>front</td>\n",
+       "      <td>99.8</td>\n",
+       "      <td>176.6</td>\n",
+       "      <td>66.2</td>\n",
+       "      <td>54.3</td>\n",
+       "      <td>2337</td>\n",
+       "      <td>ohc</td>\n",
+       "      <td>4</td>\n",
+       "      <td>109</td>\n",
+       "      <td>mpfi</td>\n",
+       "      <td>3.19</td>\n",
+       "      <td>3.40</td>\n",
+       "      <td>10</td>\n",
+       "      <td>102</td>\n",
+       "      <td>5500</td>\n",
+       "      <td>24</td>\n",
+       "      <td>30</td>\n",
+       "      <td>13950</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2</td>\n",
+       "      <td>audi</td>\n",
+       "      <td>gas</td>\n",
+       "      <td>std</td>\n",
+       "      <td>4</td>\n",
+       "      <td>sedan</td>\n",
+       "      <td>4wd</td>\n",
+       "      <td>front</td>\n",
+       "      <td>99.4</td>\n",
+       "      <td>176.6</td>\n",
+       "      <td>66.4</td>\n",
+       "      <td>54.3</td>\n",
+       "      <td>2824</td>\n",
+       "      <td>ohc</td>\n",
+       "      <td>5</td>\n",
+       "      <td>136</td>\n",
+       "      <td>mpfi</td>\n",
+       "      <td>3.19</td>\n",
+       "      <td>3.40</td>\n",
+       "      <td>8</td>\n",
+       "      <td>115</td>\n",
+       "      <td>5500</td>\n",
+       "      <td>18</td>\n",
+       "      <td>22</td>\n",
+       "      <td>17450</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>188</th>\n",
+       "      <td>-1</td>\n",
+       "      <td>volvo</td>\n",
+       "      <td>gas</td>\n",
+       "      <td>std</td>\n",
+       "      <td>4</td>\n",
+       "      <td>sedan</td>\n",
+       "      <td>rwd</td>\n",
+       "      <td>front</td>\n",
+       "      <td>109.1</td>\n",
+       "      <td>188.8</td>\n",
+       "      <td>68.9</td>\n",
+       "      <td>55.5</td>\n",
+       "      <td>2952</td>\n",
+       "      <td>ohc</td>\n",
+       "      <td>4</td>\n",
+       "      <td>141</td>\n",
+       "      <td>mpfi</td>\n",
+       "      <td>3.78</td>\n",
+       "      <td>3.15</td>\n",
+       "      <td>9</td>\n",
+       "      <td>114</td>\n",
+       "      <td>5400</td>\n",
+       "      <td>23</td>\n",
+       "      <td>28</td>\n",
+       "      <td>16845</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>189</th>\n",
+       "      <td>-1</td>\n",
+       "      <td>volvo</td>\n",
+       "      <td>gas</td>\n",
+       "      <td>turbo</td>\n",
+       "      <td>4</td>\n",
+       "      <td>sedan</td>\n",
+       "      <td>rwd</td>\n",
+       "      <td>front</td>\n",
+       "      <td>109.1</td>\n",
+       "      <td>188.8</td>\n",
+       "      <td>68.8</td>\n",
+       "      <td>55.5</td>\n",
+       "      <td>3049</td>\n",
+       "      <td>ohc</td>\n",
+       "      <td>4</td>\n",
+       "      <td>141</td>\n",
+       "      <td>mpfi</td>\n",
+       "      <td>3.78</td>\n",
+       "      <td>3.15</td>\n",
+       "      <td>8</td>\n",
+       "      <td>160</td>\n",
+       "      <td>5300</td>\n",
+       "      <td>19</td>\n",
+       "      <td>25</td>\n",
+       "      <td>19045</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>190</th>\n",
+       "      <td>-1</td>\n",
+       "      <td>volvo</td>\n",
+       "      <td>gas</td>\n",
+       "      <td>std</td>\n",
+       "      <td>4</td>\n",
+       "      <td>sedan</td>\n",
+       "      <td>rwd</td>\n",
+       "      <td>front</td>\n",
+       "      <td>109.1</td>\n",
+       "      <td>188.8</td>\n",
+       "      <td>68.9</td>\n",
+       "      <td>55.5</td>\n",
+       "      <td>3012</td>\n",
+       "      <td>ohcv</td>\n",
+       "      <td>6</td>\n",
+       "      <td>173</td>\n",
+       "      <td>mpfi</td>\n",
+       "      <td>3.58</td>\n",
+       "      <td>2.87</td>\n",
+       "      <td>8</td>\n",
+       "      <td>134</td>\n",
+       "      <td>5500</td>\n",
+       "      <td>18</td>\n",
+       "      <td>23</td>\n",
+       "      <td>21485</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>191</th>\n",
+       "      <td>-1</td>\n",
+       "      <td>volvo</td>\n",
+       "      <td>diesel</td>\n",
+       "      <td>turbo</td>\n",
+       "      <td>4</td>\n",
+       "      <td>sedan</td>\n",
+       "      <td>rwd</td>\n",
+       "      <td>front</td>\n",
+       "      <td>109.1</td>\n",
+       "      <td>188.8</td>\n",
+       "      <td>68.9</td>\n",
+       "      <td>55.5</td>\n",
+       "      <td>3217</td>\n",
+       "      <td>ohc</td>\n",
+       "      <td>6</td>\n",
+       "      <td>145</td>\n",
+       "      <td>idi</td>\n",
+       "      <td>3.01</td>\n",
+       "      <td>3.40</td>\n",
+       "      <td>23</td>\n",
+       "      <td>106</td>\n",
+       "      <td>4800</td>\n",
+       "      <td>26</td>\n",
+       "      <td>27</td>\n",
+       "      <td>22470</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>192</th>\n",
+       "      <td>-1</td>\n",
+       "      <td>volvo</td>\n",
+       "      <td>gas</td>\n",
+       "      <td>turbo</td>\n",
+       "      <td>4</td>\n",
+       "      <td>sedan</td>\n",
+       "      <td>rwd</td>\n",
+       "      <td>front</td>\n",
+       "      <td>109.1</td>\n",
+       "      <td>188.8</td>\n",
+       "      <td>68.9</td>\n",
+       "      <td>55.5</td>\n",
+       "      <td>3062</td>\n",
+       "      <td>ohc</td>\n",
+       "      <td>4</td>\n",
+       "      <td>141</td>\n",
+       "      <td>mpfi</td>\n",
+       "      <td>3.78</td>\n",
+       "      <td>3.15</td>\n",
+       "      <td>9</td>\n",
+       "      <td>114</td>\n",
+       "      <td>5400</td>\n",
+       "      <td>19</td>\n",
+       "      <td>25</td>\n",
+       "      <td>22625</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>193 rows × 25 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     symboling         make fuel_type aspiration  num_of_doors   body_style  \\\n",
+       "0            3  alfa-romero       gas        std             2  convertible   \n",
+       "1            3  alfa-romero       gas        std             2  convertible   \n",
+       "2            1  alfa-romero       gas        std             2    hatchback   \n",
+       "3            2         audi       gas        std             4        sedan   \n",
+       "4            2         audi       gas        std             4        sedan   \n",
+       "..         ...          ...       ...        ...           ...          ...   \n",
+       "188         -1        volvo       gas        std             4        sedan   \n",
+       "189         -1        volvo       gas      turbo             4        sedan   \n",
+       "190         -1        volvo       gas        std             4        sedan   \n",
+       "191         -1        volvo    diesel      turbo             4        sedan   \n",
+       "192         -1        volvo       gas      turbo             4        sedan   \n",
+       "\n",
+       "    drive_wheels engine_location  wheel_base  length  width  height  \\\n",
+       "0            rwd           front        88.6   168.8   64.1    48.8   \n",
+       "1            rwd           front        88.6   168.8   64.1    48.8   \n",
+       "2            rwd           front        94.5   171.2   65.5    52.4   \n",
+       "3            fwd           front        99.8   176.6   66.2    54.3   \n",
+       "4            4wd           front        99.4   176.6   66.4    54.3   \n",
+       "..           ...             ...         ...     ...    ...     ...   \n",
+       "188          rwd           front       109.1   188.8   68.9    55.5   \n",
+       "189          rwd           front       109.1   188.8   68.8    55.5   \n",
+       "190          rwd           front       109.1   188.8   68.9    55.5   \n",
+       "191          rwd           front       109.1   188.8   68.9    55.5   \n",
+       "192          rwd           front       109.1   188.8   68.9    55.5   \n",
+       "\n",
+       "     curb_weight engine_type  num_of_cylinders  engine_size fuel_system  bore  \\\n",
+       "0           2548        dohc                 4          130        mpfi  3.47   \n",
+       "1           2548        dohc                 4          130        mpfi  3.47   \n",
+       "2           2823        ohcv                 6          152        mpfi  2.68   \n",
+       "3           2337         ohc                 4          109        mpfi  3.19   \n",
+       "4           2824         ohc                 5          136        mpfi  3.19   \n",
+       "..           ...         ...               ...          ...         ...   ...   \n",
+       "188         2952         ohc                 4          141        mpfi  3.78   \n",
+       "189         3049         ohc                 4          141        mpfi  3.78   \n",
+       "190         3012        ohcv                 6          173        mpfi  3.58   \n",
+       "191         3217         ohc                 6          145         idi  3.01   \n",
+       "192         3062         ohc                 4          141        mpfi  3.78   \n",
+       "\n",
+       "     stroke  compression_ratio  horsepower  peak_rpm  city_mpg  highway_mpg  \\\n",
+       "0      2.68                  9         111      5000        21           27   \n",
+       "1      2.68                  9         111      5000        21           27   \n",
+       "2      3.47                  9         154      5000        19           26   \n",
+       "3      3.40                 10         102      5500        24           30   \n",
+       "4      3.40                  8         115      5500        18           22   \n",
+       "..      ...                ...         ...       ...       ...          ...   \n",
+       "188    3.15                  9         114      5400        23           28   \n",
+       "189    3.15                  8         160      5300        19           25   \n",
+       "190    2.87                  8         134      5500        18           23   \n",
+       "191    3.40                 23         106      4800        26           27   \n",
+       "192    3.15                  9         114      5400        19           25   \n",
+       "\n",
+       "     price  \n",
+       "0    13495  \n",
+       "1    16500  \n",
+       "2    16500  \n",
+       "3    13950  \n",
+       "4    17450  \n",
+       "..     ...  \n",
+       "188  16845  \n",
+       "189  19045  \n",
+       "190  21485  \n",
+       "191  22470  \n",
+       "192  22625  \n",
+       "\n",
+       "[193 rows x 25 columns]"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pd.set_option('display.max_columns',  25)\n",
+    "X"
    ]
   },
   {
